# MachineLearning_DataScience

./: .gitignore  README.md  pyproject.toml  requirements.txt
Unittest/test_Model/: test_DecisionTree.py  test_SVM.py
notebooks/: 0408_Clustering Algorithm.ipynb  0501_MSLTR_LGBMRanker.ipynb  0919_SHAP_supervised_clustering.ipynb  20191223_cnn_classification.ipynb  20201009_ctr_prediciton.ipynb  20210930_transaction_data.ipynb  20220324_shaply_value.ipynb  20220407_xgboost_cetegorical_features.ipynb  20220501_MSLTR_LGBMRanker.ipynb  20230307_annoy.ipynb  20230310_XGBoost_extract_weight.ipynb  202303_RF_DNN.ipynb  20230511_TF_ranker_movie_rec.ipynb  2023_0326_word2vec-Tensorflow2&gensim.ipynb  Untitled1.ipynb  Untitled2.ipynb  assignment_classification.ipynb  assignment_regression.ipynb  fraud-detection-0930.ipynb  fraud-detection-lightgbm-xgboost.ipynb  gensim-word2vec-tutorial.ipynb  pandas knowledge review.ipynb  plot_cyclical_feature_engineering.ipynb
notebooks/Python_tips/: Copy Module.ipynb
notebooks/recommendation/: Ranker_tf_Ranking.ipynb  Retrieve_tf_recommender.ipynb  replicate_basic_retrieve.ipynb
notebooks/tensorflow_basic/: 20200501_tf2_rnn_low_api.ipynb
notebooks/time_series_analysis/: practical-time-series-pt-1-the-basics.ipynb  practical-time-series-pt-2-smoothing-methods.ipynb  (+2 more)
paper_reading/: template.md  toread.md
reinforcement_learning/: README.md
report/: Udaciy_ML_DevOps_nanodegree.md  model_eval.xlsx  regression_model.md
scripts/: ctr_prediction.py  dssm.py
summary/: word2vector.md
training/: 20191223_cnn_classification.py
(+128 files in other folders)
